k8s/demo4/circuit-breaker.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-istio-cb
  namespace: default
  labels:
    app: demo-istio-cb
spec:
  selector:
    app: demo-istio-cb
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9010
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-istio-200-cb
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-istio-cb
      version: "200"
      code: "200"
  template:
    metadata:
      labels:
        app: demo-istio-cb
        version: "200"
        code: "200"
    spec:
      containers:
      - name: demo-istio
        image: docker.io/jsenon/demo-istio:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9010
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-istio-503-cb
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-istio-cb
      version: "503"
      code: "503"
  template:
    metadata:
      labels:
        app: demo-istio-cb
        version: "503"
        code: "503"
    spec:
      containers:
      - name: demo-istio
        image: docker.io/jsenon/demo-istio:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9010
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo-istio-cb
spec:
  host: demo-istio-cb.default.svc.cluster.local
  trafficPolicy:
    outlierDetection:
      consecutiveErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
