k8s/demo4/virtualservice-delay.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-istio-delay
spec:
  hosts:
    - "*"
  gateways:
  - demo-istio-gateway # <---- bind to gateway
  http:
  - match:
    - headers:
        cookie:
          regex: "^(.*?;)?(user=julien)(;.*)?"
        uri:
          prefix: "/delay/"
    route:
    - destination:
        host: demo-istio
      weight: 100
    fault:
      delay:
        percent: 100
        fixedDelay: 5s
  - match:
    - uri:
         prefix: "/nodelay/"
    route:
    - destination:
        host: demo-istio
      weight: 100
  - match:
    - uri:
         prefix: "/outlier/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: demo-istio-v2
      weight: 100
  - match:
    - uri:
         prefix: "/error/"
    route:
    - destination:
        host: demo-istio
      weight: 100
    fault:
      abort:
        percent: 100
        httpStatus: 400
